fix(ffe-form): gap between icon and label text should be 8 px in radio/checkbox

--- a/packages/ffe-form/less/checkbox.less
+++ b/packages/ffe-form/less/checkbox.less
@@ -3,7 +3,7 @@
 
     line-height: var(--line-height);
     display: grid;
-    grid-column-gap: @ffe-spacing-sm;
+    grid-column-gap: @ffe-spacing-xs;
     align-items: center;
     margin: @ffe-spacing-xs 0;
     cursor: pointer;
